pre-commit: add hook to ensure absence of Doxygen tags

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,3 +29,8 @@ repos:
     language: script
     types: [text]
     exclude: '^tools/'
+  - id: check-doxygen-tags
+    name: no doxygen tags present
+    entry: '^!>'
+    language: pygrep
+    types: [text]
