--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,7 +110,7 @@ if (Fortran_COMPILER_NAME MATCHES "^gfortran.*")
   set(CMAKE_CXX_FLAGS_RELEASE      "-O3 -funroll-loops")
   set(CMAKE_CXX_FLAGS_COVERAGE     "-O0 -fprofile-arcs -ftest-coverage")
   set(CMAKE_CXX_FLAGS_DEBUG        "-O0 -ggdb")
-  set(CMAKE_Fortran_FLAGS          "-ffree-form -ffree-line-length-none -std=f2003")
+  set(CMAKE_Fortran_FLAGS          "-ffree-form -ffree-line-length-none -std=f2008")
   set(CMAKE_Fortran_FLAGS_RELEASE  "-O3 -funroll-loops")
   set(CMAKE_Fortran_FLAGS_DEBUG    "-O0 -ggdb")
   set(CMAKE_Fortran_FLAGS_COVERAGE "-O0 -fprofile-arcs -ftest-coverage")
@@ -126,22 +126,22 @@ if (Fortran_COMPILER_NAME MATCHES "^gfortran.*")
 elseif (Fortran_COMPILER_NAME MATCHES "^ifort.*")
   set(CMAKE_CXX_FLAGS_RELEASE      "-O3")
   set(CMAKE_CXX_FLAGS_DEBUG        "-O0 -debug")
-  set(CMAKE_Fortran_FLAGS          "-free -stand f03 -fpp")
+  set(CMAKE_Fortran_FLAGS          "-free -stand f08 -fpp")
   # Disable the line-length-extension warning #5268
   set(CMAKE_Fortran_FLAGS_RELEASE  "-O3 -diag-disable=5268")
   set(CMAKE_Fortran_FLAGS_DEBUG    "-O0 -debug")
-  set(F2008_COMPILER_FLAGS         "-stand f08")
+  set(F2008_COMPILER_FLAGS         "")
 elseif (Fortran_COMPILER_NAME MATCHES "^pgf.*")
   set(CMAKE_CXX_FLAGS_RELEASE      "-fast")
   set(CMAKE_CXX_FLAGS_DEBUG        "-g")
-  set(CMAKE_Fortran_FLAGS          "-Mfreeform -Mextend -Mallocatable=03")
+  set(CMAKE_Fortran_FLAGS          "-Mfreeform -Mextend -Mallocatable=03")  # -Mallocatable=03: enable F2003+ assignment semantics
   set(CMAKE_Fortran_FLAGS_RELEASE  "-fast")
   set(CMAKE_Fortran_FLAGS_DEBUG    "-g")
   set(F2008_COMPILER_FLAGS         "")
 else ()
   message(WARNING "\
 Unknown compiler, trying with just '-O2'/'-O0 -g'.\n\
-You will most likely have to pass additonal options for free-form Fortran 2003/2008 for your compiler!\n\
+You will most likely have to pass additonal options for free-form Fortran 2008 for your compiler!\n\
 Please open an issue at https://github.com/cp2k/dbcsr/issues with the reported compiler name and the required flags.")
   message("-- Fortran_COMPILER_NAME: " ${Fortran_COMPILER_NAME})
   message("-- CMAKE_Fortran_COMPILER full path: " ${CMAKE_Fortran_COMPILER})
@@ -149,6 +149,8 @@ Please open an issue at https://github.com/cp2k/dbcsr/issues with the reported c
   set(CMAKE_Fortran_FLAGS_RELEASE  "-O2")
   set(CMAKE_Fortran_FLAGS_DEBUG    "-O0 -g")
 endif ()
+
+include(CheckCompilerSupport)
 
 file(STRINGS VERSION VERSION_INFO)
 foreach(line ${VERSION_INFO})
