pre-commit: remove check-ast py2 for tune|predict
Relax python2-compatibility requirement for scripts that will only
be used by more advanced users, namely the scripts belonging to the
autotuning and predicting workflows

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
   - id: check-ast
     stages: [manual]
     language_version: "python2"
+    exclude: '^src/acc/libsmm_acc/libcusmm/(tune|predict)_'
   - id: check-ast
     stages: [manual]
     language_version: "python3"
