--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,10 @@ repos:
   rev: v2.0.0
   hooks:
   - id: flake8
+    language_version: "python2"
+    exclude: '^src/acc/libsmm_acc/libcusmm/(tune|predict)_'
+  - id: flake8
+    language_version: "python3"
   - id: check-ast
     stages: [manual]
     language_version: "python2"
