--- a/tests/Makefile.inc
+++ b/tests/Makefile.inc
@@ -22,7 +22,7 @@ dbcsr_tensor_unittest: BIN_DEPS =
 ifneq ($(NVCC),)
 UNITTESTS += libcusmm_unittest_multiply libcusmm_unittest_transpose libcusmm_timer_multiply
 
-libcusmm_unittest_multiply.cu: $(DBCSRHOME)/tests/generate_libcusmm_unittest_multiply.py
+libcusmm_unittest_multiply.cu: $(DBCSRHOME)/tests/generate_libcusmm_unittest_multiply.py $(DBCSRHOME)/tests/libcusmm_unittest_multiply.template
 	$(DBCSRHOME)/tests/generate_libcusmm_unittest_multiply.py --base_folder $(DBCSRHOME) --gpu_version=$(GPUVER)
 
 libcusmm_unittest_multiply: libcusmm_unittest_multiply.cu
@@ -33,7 +33,7 @@ libcusmm_unittest_multiply: BIN_DEPS =
 SRC_TESTS += libcusmm_unittest_transpose.cu
 libcusmm_unittest_transpose: BIN_DEPS =
 
-libcusmm_timer_multiply.cu: $(DBCSRHOME)/tests/generate_libcusmm_timer_multiply.py 
+libcusmm_timer_multiply.cu: $(DBCSRHOME)/tests/generate_libcusmm_timer_multiply.py $(DBCSRHOME)/tests/libcusmm_timer_multiply.template
 	$(DBCSRHOME)/tests/generate_libcusmm_timer_multiply.py --base_folder $(DBCSRHOME) --gpu_version=$(GPUVER)
 
 libcusmm_timer_multiply: libcusmm_timer_multiply.cu
