--- a/examples/tight_binding/Makefile
+++ b/examples/tight_binding/Makefile
@@ -10,20 +10,13 @@ FCFLAGS    = $(FLAGS) $(INCLUDES) -fno-omit-frame-pointer \
 CXXFLAGS   = $(FLAGS) $(INCLUDES) -std=c++11
 LIBS       = -L$(DBCSRDIR)/lib -ldbcsr
 LIBS      += -L${LAPACK_PATH}/lib -llapack -lblas
-# Add the MPI Fortran library (check with `mpifort -show`):
-# OpenMPI : -lmpi_mpifh
-# MPICH   : -lmpifort
 CLIBS      = $(LIBS) -lgfortran -lmpi_mpifh
 
-OBJ = tight_binding.o dm_ls_scf_methods.o
+OBJ =  dm_ls_scf_methods.o tight_binding.o
 
 # Fortran examples
 all: tight_binding.x 
 
-# Include C/C++ examples if the dbcsr.h is installed
-#ifneq (,$(wildcard $(DBCSRDIR)/include/dbcsr.h))
-#all: dbcsr_example_3_cpp.x
-#endif
 
 %.o: %.F
 	$(FC) $(FCFLAGS) -c -o $@ $<   
@@ -32,8 +25,6 @@ all: tight_binding.x
 	$(FC) $(FCFLAGS) $(OBJ) $(LIBS) -o $@
 
 
-%_cpp.x: %.cpp
-	$(CXX) $(CXXFLAGS) $< $(CLIBS) -o $@
 
 clean:
 	rm -rf *.x
