--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,23 +4,20 @@ default_language_version:
 exclude: '^tools/(prettify/fprettify|build_utils/fypp)'
 fail_fast: false
 repos:
-- repo: https://github.com/pre-commit/mirrors-yapf
-  rev: v0.24.0
+- repo: https://github.com/ambv/black
+  rev: stable
   hooks:
-  - id: yapf
+  - id: black
     language_version: "python3"
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v2.0.0
   hooks:
-  - id: flake8
-    language_version: "python2"
-    exclude: '^src/acc/libsmm_acc/libcusmm/(tune|predict)_'
-  - id: flake8
-    language_version: "python3"
   - id: check-ast
     stages: [manual]
     language_version: "python2"
     exclude: '^src/acc/libsmm_acc/libcusmm/(tune|predict)_'
+  - id: flake8
+    language_version: "python3"
   - id: check-ast
     stages: [manual]
     language_version: "python3"
