tests/generate_*: add flag to optionally specify output directory
and adapt Makefile accordingly

--- a/tests/Makefile.inc
+++ b/tests/Makefile.inc
@@ -25,7 +25,7 @@ ifneq ($(NVCC),)
 UNITTESTS += libcusmm_unittest_multiply libcusmm_unittest_transpose libcusmm_timer_multiply
 
 libcusmm_unittest_multiply.cu: $(DBCSRHOME)/tests/generate_libcusmm_unittest_multiply.py $(DBCSRHOME)/tests/libcusmm_unittest_multiply.template
-	$(DBCSRHOME)/tests/generate_libcusmm_unittest_multiply.py --base_folder $(DBCSRHOME) --gpu_version=$(GPUVER)
+	$(DBCSRHOME)/tests/generate_libcusmm_unittest_multiply.py --base_dir $(DBCSRHOME) --gpu_version=$(GPUVER)
 
 libcusmm_unittest_multiply: libcusmm_unittest_multiply.cu
 
@@ -36,7 +36,7 @@ SRC_TESTS += libcusmm_unittest_transpose.cu
 libcusmm_unittest_transpose: BIN_DEPS =
 
 libcusmm_timer_multiply.cu: $(DBCSRHOME)/tests/generate_libcusmm_timer_multiply.py $(DBCSRHOME)/tests/libcusmm_timer_multiply.template
-	$(DBCSRHOME)/tests/generate_libcusmm_timer_multiply.py --base_folder $(DBCSRHOME) --gpu_version=$(GPUVER)
+	$(DBCSRHOME)/tests/generate_libcusmm_timer_multiply.py --base_dir $(DBCSRHOME) --gpu_version=$(GPUVER)
 
 libcusmm_timer_multiply: libcusmm_timer_multiply.cu
 
