Makefile: remove superfluous variable CXXOMPFLAGS
Remove the superfluous variable CXXOMPFLAGS, and instead, add
OpenMP flags to the variable CXXFLAGS.
This simplifies the Makefile and reduces the risk of issues such
as https://github.com/cp2k/cp2k/issues/338 occuring.

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -147,7 +147,7 @@ else
 endif
 
 ifneq (0,$(OMP)) # using OpenMP
-  CXXOMPFLAGS = -fopenmp
+  CXXFLAGS += -fopenmp
   FCFLAGS  += -fopenmp
 endif
 
