Remove MacOS compilation by default

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -230,7 +230,5 @@ endif
 #######################################################################################
 #
 # Enable for MacOS compilation (-D__ACCELERATE is for Apple Accelerate library)
-
-FCFLAGS += -D__NO_STATM_ACCESS -D__ACCELERATEa
-
+#FCFLAGS += -D__NO_STATM_ACCESS -D__ACCELERATE
 #######################################################################################
