libcusmm/notebooks: make more usable, port to dask

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
   - id: check-ast
     stages: [manual]
     language_version: "python2"
-    exclude: '^src/acc/libsmm_acc/libcusmm/(tune|predict)_'
+    exclude: '^src/acc/libsmm_acc/libcusmm/(tune|predict|notebooks)_'
   - id: flake8
     language_version: "python3"
   - id: check-ast
